--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -36,9 +36,6 @@
 @import "partials/homepage/electedOfficials";
 
 
-html, body {
-	overflow-x: hidden;
-}
-
-
-
+// html, body {
+// 	overflow-x: hidden;
+// }
