--- a/assets/stylesheets/partials/components/_secondaryNav.scss
+++ b/assets/stylesheets/partials/components/_secondaryNav.scss
@@ -2,7 +2,7 @@
     background: $darker-gray;
 
     .secondary-nav-list {
-      padding: 8px 0;
+      padding: 12px 0 13px;
       
       .secondary-nav-list-item {
         border-right: 1px solid $light-gray;
