--- a/staging/components/carousel.html
+++ b/staging/components/carousel.html
@@ -1,4 +1,5 @@
-<div class="carousel-item">
+
+<div class="carousel-item" height="300px;">
 	<img class="carousel-image" src="assets/img/carousel-petadoption.jpg"  />
 	<div class="carousel-message">
 	  <h2>Adopt a lost or adoptable pet</h2>
