--- a/staging/components/search.html
+++ b/staging/components/search.html
@@ -1,4 +1,18 @@
-<button>Search</button>
+<!-- <button>Search</button> -->
 <div class="search-text">
-  <label class="search-label" for="search-input">Search</label><input type="search" class="search-input" name="search-input" placeholder="Search for agencies, services and more..." />
+  <label class="search-label" for="search-input">Search</label>
+	<script>
+	  (function() {
+	    var cx = '007558505509255245046:qqwcx9uroqk';
+	    var gcse = document.createElement('script');
+	    gcse.type = 'text/javascript';
+	    gcse.async = true;
+	    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+	        '//www.google.com/cse/cse.js?cx=' + cx;
+	    var s = document.getElementsByTagName('script')[0];
+	    s.parentNode.insertBefore(gcse, s);
+	  })();
+	</script>
+	<gcse:searchbox-only enableAutoComplete="false"></gcse:searchbox-only>
+	<!-- <gcse:search type="search" class="search-input" name="search-input" placeholder="Search for agencies, services and more..."></gcse:search> -->
 </div>
