--- a/assets/stylesheets/existing/red-inside-calendar.css
+++ b/assets/stylesheets/existing/red-inside-calendar.css
@@ -34,3 +34,7 @@ display: block;
 float: none;
 margin: -20px 0 0 190px;
 }
+
+#SECalendarListWrapper .SECalendarSmallCal {
+    margin: 5px 0 0 -178px;
+}
