--- a/assets/stylesheets/existing/temp-content.css
+++ b/assets/stylesheets/existing/temp-content.css
@@ -3,7 +3,7 @@
 }
 #maincontainer h1 {
 	font-family : Arial, Helvetica, sans-serif;
-	font-size : 1.8em;
+	font-size : 19px;
 	font-weight : bold;
 	color : #444;
 	margin : 5px 0 20px 0;
