--- a/assets/stylesheets/inside-template.scss
+++ b/assets/stylesheets/inside-template.scss
@@ -1,6 +1,3 @@
-@import url(//fonts.googleapis.com/css?family=Patua+One);
-@import url(//fonts.googleapis.com/css?family=Lato:700);
-
 /*Modules*/
 @import "modules/formReset";
 /* Partials */
@@ -25,12 +22,33 @@ body {
 	min-width: 1200px;
 }
 
-.brand .brand-logo {
-	margin: 0 10px 0 0;
-}
-
 .agency-page img {
 	border: none;
 	padding: 0;
 	margin: 0;
+}
+
+#maincontainer p {
+	font-size: 12px;
+	line-height: 1.5em;
+	margin: 0 0 15px 0; 	
+}
+#maincontainer #calloutarea p {
+  margin: 10px 0 15px;
+}
+
+.secondary-nav .secondary-nav-list {
+	padding: 14px 0;
+}
+
+
+textarea,
+input,
+input[type="search"],
+input[type="text"],
+input[type="button"],
+input[type="submit"] {
+     -webkit-appearance: none;
+     -webkit-border-radius: 0;
+     border-radius: 0;
 }
