--- a/assets/stylesheets/partials/base/_brand.scss
+++ b/assets/stylesheets/partials/base/_brand.scss
@@ -1,8 +1,4 @@
 .brand {
-  display: inline-block;
-  float: left;
-  padding: 0;
-  
   a, a:hover {
     text-decoration:none;
   }
@@ -14,27 +10,41 @@
   h1, img {
     border: none;
   }
+
+  img {
+    margin: 0 20px 0 0;
+    padding: 0;
+  }
   
   .brand-heading {
     font-size: 1.7em;
     line-height: 28px;
-    padding: 20px 0;
+    padding: 31.5px 0 29.5px;
     font-family: $brand-font-family;
     font-weight: 700;
     letter-spacing:.4px;
-    margin: 13px 0 0;
-  }
-
-  .brand-logo {
-    margin: 0 10px 0 20px;
+    margin: 0;
   }
 
   .brand-logo, .brand-heading {
     display: inline-block;
     vertical-align: middle;
   }
-}
+  
+  .brand-logo {
+    margin-left: 15px;
+  }
+  .smaller-text {
+    display: block;
+    padding-top: 5px;
+  }
 
+}
+@media only screen and (min-width: 992px) and (max-width: 1120px) {
+  .brand .brand-heading {
+    font-size: 1.4em;
+  }
+}
 @media only screen and (max-width: 480px){
     .brand {
       padding: 5px;
