--- a/assets/stylesheets/partials/base/_primaryFooter.scss
+++ b/assets/stylesheets/partials/base/_primaryFooter.scss
@@ -4,6 +4,10 @@
 	h2 {
 		margin: 0;
 	}
+
+	.county-help-list-item a {
+		line-height: 24px;
+	}
 }
 @media only screen and (max-width: 992px) {
 	.primary-footer .social-media-list {
