--- a/assets/stylesheets/partials/components/_primaryNav.scss
+++ b/assets/stylesheets/partials/components/_primaryNav.scss
@@ -92,14 +92,14 @@
         font-size: .55em;
       }
     }
-  }
-  
+  } 
 }
 
 @media only screen and (min-width: 767px) and (max-width: 992px) {
   .homepage {
     .primary-nav{
       width:100%;
+      background: blue;
     }
 
     .primary-nav .primary-nav-item a{
@@ -113,11 +113,14 @@
 }
 
 
+
+
+
 @media only screen and (min-width: 767px) and (max-width: 800px) {
   .homepage {
     .primary-nav .primary-nav-item {
       .primary-nav-item__headline {
-        font-size: 1.5em;
+        font-size: 1.4em;
       }
       .primary-nav-item__tagline {
         font-size: .55em;
