--- a/assets/stylesheets/partials/conditional/_ieLT9.scss
+++ b/assets/stylesheets/partials/conditional/_ieLT9.scss
@@ -1,5 +1,5 @@
 /*IE8*/
-.promotions-container .search-container {
+.carousel-wrapper .search-container {
 	margin: auto;
   	position: absolute;
   	top: 50px; left: 0; right: 0;
@@ -9,4 +9,24 @@
 .slick-dots li button:before {
 	color: #A8A8A8;
 	opacity: 1;
+}
+
+.full-site-container {
+	display: none;
+}
+
+
+@media only screen and (max-width: 992px) {
+	.carousel-wrapper .search-container {
+		margin: auto;
+	  	position: relative;
+	  	height: 275px;
+	}
+}
+@media only screen and (max-width: 767px) {
+	.carousel-wrapper .search-container {
+		margin: auto;
+	  	position: relative;
+	  	height: 350px;
+	}
 }
