--- a/assets/stylesheets/partials/inside/_search.scss
+++ b/assets/stylesheets/partials/inside/_search.scss
@@ -1,19 +1,21 @@
 @import "../components/search";
 
 .search-internal {
-
-  padding: 0;
-
-  .search-input {
-  	font-size: 1.2em;
-    height: auto;
-    padding: 8px 10px;
+  padding: 2.5px 0;
+  
+  .search-input, .cse input.gsc-input, input.gsc-input {
+  	font-size: 1.2em !important;
+    height: auto !important;
+    padding: 8px 10px !important;
   }
 
-  button {
-  	font-size: 1.2em;
-  	border: 0;
-    height: auto;
-    padding: 8px 10px;
+  input.gsc-search-button {
+    border-radius: 0 !important;
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 1.1em !important;
+    font-weight: 700 !important;
+    border: 0 !important;
+    height: auto !important;
+    padding: 10px 10px !important;
   }
 }
