--- a/staging/components/search.html
+++ b/staging/components/search.html
@@ -13,6 +13,6 @@
 	    s.parentNode.insertBefore(gcse, s);
 	  })();
 	</script>
-	<gcse:searchbox-only enableAutoComplete="false"></gcse:searchbox-only>
+	<gcse:searchbox-only enableAutoComplete="true"></gcse:searchbox-only>
 	<!-- <gcse:search type="search" class="search-input" name="search-input" placeholder="Search for agencies, services and more..."></gcse:search> -->
 </div>
