--- a/assets/stylesheets/ieLT9.css
+++ b/assets/stylesheets/ieLT9.css
@@ -7,6 +7,9 @@
   right: 0;
   height: 150px; }
 
+.gssb_c {
+  display: none !important; }
+
 .slick-dots li button:before {
   color: #A8A8A8;
   opacity: 1; }
@@ -24,5 +27,3 @@
     margin: auto;
     position: relative;
     height: 350px; } }
-
-/*# sourceMappingURL=ieLT9.css.map */
