--- a/assets/stylesheets/mobile.css
+++ b/assets/stylesheets/mobile.css
@@ -1,5 +1,3 @@
-@import url(//fonts.googleapis.com/css?family=Patua+One);
-@import url(//fonts.googleapis.com/css?family=Lato:700);
 /*Resets*/
 /* Modules and Variables */
 .inline-list {
@@ -211,14 +209,15 @@ html {
 
 html, body {
   background: #dbdbdb;
-  color: #444;
+  color: #444444;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  width: 100%; }
 
 img {
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
   margin: 5px;
   padding: 5px; }
 
@@ -245,7 +244,9 @@ input[type="submit"] {
  */
 .container {
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px; }
 
 @media (min-width: 768px) {
   .container {
@@ -259,6 +260,8 @@ input[type="submit"] {
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
   max-width: 1200px; }
 
 .row {
@@ -954,29 +957,32 @@ input[type="submit"] {
   src: url("/sebin/u/y/PatuaOne-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("/sebin/i/z/PatuaOne-Regular-webfont.woff2") format("woff2"), url("/sebin/c/m/PatuaOne-Regular-webfont.woff") format("woff"), url("/sebin/c/o/PatuaOne-Regular-webfont.ttf") format("truetype"), url("/sebin/b/d/PatuaOne-Regular-webfont.svg#patua_oneregular") format("svg");
   font-weight: normal;
   font-style: normal; }
+
 @font-face {
   font-family: 'LatoSemiBold';
   src: url("/sebin/s/v/Lato-Semibold-webfont.eot");
   src: url("/sebin/s/v/Lato-Semibold-webfont.eot?#iefix") format("embedded-opentype"), url("/sebin/q/h/Lato-Semibold-webfont.woff2") format("woff2"), url("/sebin/y/z/Lato-Semibold-webfont.woff") format("woff"), url("/sebin/y/p/Lato-Semibold-webfont.ttf") format("truetype"), url("/sebin/v/j/Lato-Semibold-webfont.svg") format("svg");
   font-weight: normal;
   font-style: normal; }
+
 @font-face {
   font-family: 'Lato';
   src: url("/sebin/g/x/Lato-Bold-webfont.eot");
   src: url("/sebin/g/x/Lato-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("/sebin/w/q/Lato-Bold-webfont.woff2") format("woff2"), url("/sebin/k/i/Lato-Bold-webfont.woff") format("woff"), url("/sebin/i/t/Lato-Bold-webfont.ttf") format("truetype"), url("/sebin/h/i/Lato-Bold-webfont.svg") format("svg");
   font-weight: normal;
   font-style: normal; }
+
 .homepage body, .header body, .footer body {
   font-size: .95em;
   line-height: 1.5em;
-  color: #444; }
+  color: #444444; }
 .homepage p, .header p, .footer p {
   margin: 0 0 20px;
   line-height: 24px; }
 .homepage small, .header small, .footer small {
   font-size: 85%; }
 .homepage h1, .homepage h2, .homepage h3, .homepage h4, .homepage h5, .homepage h6, .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .footer h1, .footer h2, .footer h3, .footer h4, .footer h5, .footer h6 {
-  color: #444;
+  color: #444444;
   font-weight: normal; }
 .homepage h1, .homepage h2, .header h1, .header h2, .footer h1, .footer h2 {
   font-family: "Patua One", sans-serif; }
@@ -1016,16 +1022,17 @@ input[type="submit"] {
   height: 100%; }
 
 .secondary-header {
-  background: #333;
+  background: #333333;
   font-size: .85em;
-  padding: 10px 0; }
+  padding: 10px 0;
+  width: 100%; }
   .secondary-header a {
     color: #dbdbdb;
     display: block;
     line-height: 11px;
     text-decoration: underline; }
     .secondary-header a:hover {
-      color: #fff; }
+      color: white; }
   .secondary-header .page-tools {
     text-align: right; }
     .secondary-header .page-tools a, .secondary-header .page-tools ul {
@@ -1052,13 +1059,13 @@ input[type="submit"] {
 
 .primary-nav {
   background: #c51110;
-  color: #fff;
+  color: white;
   list-style-type: none;
   height: 100%;
   margin: 0;
   padding: 0; }
   .primary-nav a {
-    color: #fff; }
+    color: white; }
   .primary-nav .primary-nav-item {
     background-color: #a90f0e;
     border-right: 5px solid #c51110;
@@ -1107,12 +1114,16 @@ input[type="submit"] {
     font-size: 1.6em; }
   .homepage .primary-nav .primary-nav-item .primary-nav-item__tagline {
     font-size: .55em; } }
+@media only screen and (min-width: 992px) and (max-width: 1002px) {
+  .homepage .primary-nav .primary-nav-item .primary-nav-item__headline {
+    font-size: 1.3em; }
+  .homepage .primary-nav .primary-nav-item .primary-nav-item__tagline {
+    font-size: .55em; } }
 @media only screen and (min-width: 767px) and (max-width: 992px) {
   .homepage .primary-nav {
-    width: 100%;
-    background: blue; }
+    width: 100%; }
   .homepage .primary-nav .primary-nav-item a {
-    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px transparent;
+    background: url("//baltimorecountymd.gov/sebin/l/t/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
     padding: 20px 0 20px 40px; }
   .homepage .primary-nav .primary-nav-item {
     margin: 0 0 5px; } }
@@ -1135,8 +1146,12 @@ input[type="submit"] {
     display: none; }
     .homepage .primary-nav.mobile-menu-visible, .homepage .secondary-nav.mobile-menu-visible {
       display: block; } }
+.homepage #primary-nav-container {
+  padding: 0; }
+
 .secondary-nav {
-  background: #333; }
+  background: #333333;
+  z-index: 999; }
   .secondary-nav .secondary-nav-list {
     padding: 12px 0 13px; }
     .secondary-nav .secondary-nav-list .secondary-nav-list-item {
@@ -1163,7 +1178,7 @@ input[type="submit"] {
 .brand a, .brand a:hover {
   text-decoration: none; }
 .brand h1 {
-  color: #fff; }
+  color: white; }
 .brand h1, .brand img {
   border: none; }
 .brand img {
@@ -1180,23 +1195,21 @@ input[type="submit"] {
 .brand .brand-logo, .brand .brand-heading {
   display: inline-block;
   vertical-align: middle; }
-.brand .brand-logo {
-  margin-left: 15px; }
 .brand .smaller-text {
   display: block;
   padding-top: 5px; }
 
 @media only screen and (min-width: 992px) and (max-width: 1120px) {
-  .brand .brand-heading {
+  .homepage .brand .brand-heading {
     font-size: 1.4em; } }
 @media only screen and (max-width: 480px) {
-  .brand {
+  .homepage .brand {
     padding: 5px; }
-    .brand .brand-heading {
+    .homepage .brand .brand-heading {
       font-size: 1.4em;
       line-height: 25px;
       margin: 10px 0 0; }
-    .brand .brand-logo {
+    .homepage .brand .brand-logo {
       height: 65px;
       width: 65px;
       margin-right: 5px; } }
@@ -1213,12 +1226,12 @@ input[type="submit"] {
     text-align: left; } }
 .secondary-footer {
   background: #c51110;
-  color: #fff;
-  padding: 20px; }
+  color: white;
+  padding: 20px 0; }
   .secondary-footer a {
     color: white; }
   .secondary-footer .county-links-list-item {
-    border-right: 1px solid #fff;
+    border-right: 1px solid white;
     padding: 0 5px; }
     .secondary-footer .county-links-list-item:last-child {
       border-right: none; }
@@ -1258,16 +1271,16 @@ input[type="submit"] {
   margin: 15px 15px 0 0; }
 
 .footer {
-  background: #333;
+  background: #333333;
   color: #dbdbdb;
   font-size: .85em; }
   .footer a {
     color: #dbdbdb;
     text-decoration: underline; }
     .footer a:hover {
-      color: #fff; }
+      color: white; }
   .footer h2 {
-    color: #fff; }
+    color: white; }
   .footer h2, .footer img {
     border: none; }
   .footer ul, .footer ol {
@@ -1292,7 +1305,8 @@ input[type="submit"] {
       padding-left: 5px; } }
 /*Components*/
 .secondary-nav {
-  background: #333; }
+  background: #333333;
+  z-index: 999; }
   .secondary-nav .secondary-nav-list {
     padding: 12px 0 13px; }
     .secondary-nav .secondary-nav-list .secondary-nav-list-item {
@@ -1397,16 +1411,16 @@ button {
 
 .link-btn {
   background: #feb30c;
-  border: 1px solid #444;
+  border: 1px solid #444444;
   padding: 10px;
-  color: #444;
+  color: #444444;
   text-decoration: none;
   font-weight: 700;
   font-family: Arial;
   font-size: 1.1em; }
   .link-btn:hover {
     background: #fed372;
-    color: #444; }
+    color: #444444; }
 
 .view-full-site-btn {
   padding: 20px 10px; }
@@ -1436,7 +1450,7 @@ a.skip:hover {
   list-style-type: none;
   text-align: center; }
   .social-media-list h1, .social-media-list a {
-    color: #fff; }
+    color: white; }
   .social-media-list li {
     padding-left: 0; }
 
@@ -1444,7 +1458,7 @@ a.skip:hover {
   background-image: url("//staging.baltimorecountymd.gov/homepageredesign/assets/img/social-icons-sprite.png");
   height: 37px;
   width: 37px;
-  margin-right: 30px; }
+  margin-right: 25px; }
   .social-media-list-item a {
     border: none;
     text-decoration: none;
@@ -1510,7 +1524,6 @@ a.skip:hover {
 .search, .cse input.gsc-input, input.gsc-input {
   padding: 20px; }
   .search .search-input, .search button, .search .gsc-search-button, .cse input.gsc-input .search-input, .cse input.gsc-input button, .cse input.gsc-input .gsc-search-button, input.gsc-input .search-input, input.gsc-input button, input.gsc-input .gsc-search-button {
-    border: none !important;
     margin: 0 !important; }
   .search .search-text, .cse input.gsc-input .search-text, input.gsc-input .search-text {
     overflow: hidden; }
@@ -1526,14 +1539,14 @@ a.skip:hover {
 
 input.gsc-search-button {
   border-radius: 0 !important;
-  color: #444 !important;
+  color: #444444 !important;
   float: right;
   background: #feb30c !important;
   cursor: pointer;
   font-family: Arial, Helvetica, sans-serif !important;
   font-size: 17.6px !important;
   font-weight: 700 !important;
-  padding: 20px 20px 40px !important; }
+  padding: 19px 20px 39px !important; }
 
 .cse input.gsc-input, input.gsc-input {
   background: white !important;
@@ -1548,6 +1561,9 @@ td.gsc-clear-button {
 .cse form.gsc-search-box, form.gsc-search-box {
   margin: 0 !important;
   padding: 0 !important; }
+
+input.gsc-input, input.gsc-search-button {
+  border: 1px solid #999 !important; }
 
 @media only screen and (max-width: 400px) {
   .cse input.gsc-input, input.gsc-input {
@@ -1605,25 +1621,8 @@ td.gsc-clear-button {
     padding: 11px 10px; }
 
   .search-input-container {
-    font-size: .95em; }
-
-  ::-webkit-input-placeholder {
-    /* WebKit browsers */
-    color: transparent; }
-
-  :-moz-placeholder {
-    /* Mozilla Firefox 4 to 18 */
-    color: transparent; }
-
-  ::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
-    color: transparent; }
-
-  :-ms-input-placeholder {
-    /* Internet Explorer 10+ */
-    color: transparent; } }
+    font-size: .95em; } }
 html, body {
-  overflow-x: hidden;
   font-size: .95em; }
 
 .agency-page img {
@@ -1648,5 +1647,3 @@ input[type="submit"] {
   -webkit-appearance: none;
   -webkit-border-radius: 0;
   border-radius: 0; }
-
-/*# sourceMappingURL=mobile.css.map */
