--- a/assets/stylesheets/partials/components/_search.scss
+++ b/assets/stylesheets/partials/components/_search.scss
@@ -2,7 +2,6 @@
   padding: 20px;
 
   .search-input, button, .gsc-search-button {
-    border: none !important;
     margin: 0 !important;
   }
 
@@ -23,10 +22,6 @@
   div.gsc-clear-button {
     display: none;
   }
-
-  button {
-
-  }
 }
 
 input.gsc-search-button {
@@ -38,7 +33,7 @@ input.gsc-search-button {
     font-family: Arial, Helvetica, sans-serif !important;
     font-size: 17.6px !important;
     font-weight: 700 !important;
-    padding: 20px 20px 40px !important;
+    padding: 19px 20px 39px !important;
 }
 .cse input.gsc-input, input.gsc-input {
   background: white !important;
@@ -55,6 +50,9 @@ td.gsc-clear-button {
   padding: 0 !important;
 }
 
+input.gsc-input, input.gsc-search-button {
+  border:1px solid #999 !important;
+}
 
 @media only screen and (max-width: 400px) {
   .cse input.gsc-input, input.gsc-input {
